--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,13 @@ body {
 
 .title {
   font-family: 'Poiret One', cursive;
+  font-display: swap;
   text-shadow: 4px 2px 10px gray;
 }
 
 .caption {
   font-family: 'Bad Script', cursive;
+  font-display: swap;
 }
 
 .video-container {
